# diet-tracker

./: .gitignore  Dockerfile  main.py  meal_provider.py  pyproject.toml
.github/workflows/: build.yml
static/css/: style.css
static/html/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html
